--- a/templates/partials/import_result.html
+++ b/templates/partials/import_result.html
@@ -6,7 +6,7 @@
         </div>
         <div>
             <h3 class="font-semibold text-lg">Import Successful</h3>
-            <p class="text-neutral-600 dark:text-neutral-400">{{ imported_count }} expense(s) imported.</p>
+            <p class="text-neutral-600 dark:text-neutral-400">{{ imported_count }} transaction(s) imported.</p>
         </div>
     </div>
     {% endif %}
@@ -23,8 +23,8 @@
     {% endif %}
 
     <div class="mt-6 flex gap-4">
-        <a href="/expenses" class="btn btn-primary">
-            View Expenses
+        <a href="/transactions" class="btn btn-primary">
+            View Transactions
         </a>
         <a href="/import" class="btn btn-secondary">
             Import More
