--- a/templates/macros/table.html
+++ b/templates/macros/table.html
@@ -8,10 +8,10 @@
     {% call table::th(label="Actions", align="right") %}
 
     For sortable headers (full page reload):
-    {% call table::th_sort(label="Date", url="/expenses", sort_qs=sort.query_string_for_str("date"), indicator=sort.indicator_str("date"), align="left", extra=date_range.query_string()) %}
+    {% call table::th_sort(label="Date", url="/transactions", sort_qs=sort.query_string_for_str("date"), indicator=sort.indicator_str("date"), align="left", extra=date_range.query_string()) %}
 
     For sortable headers with HTMX:
-    {% call table::th_sort_htmx(label="Date", url="/expenses/table", target="#expense-table", sort_qs=sort.query_string_for_str("date"), indicator=sort.indicator_str("date"), align="left", extra=filter.preserve_query_string(date_range)) %}
+    {% call table::th_sort_htmx(label="Date", url="/transactions/table", target="#transaction-table", sort_qs=sort.query_string_for_str("date"), indicator=sort.indicator_str("date"), align="left", extra=filter.preserve_query_string(date_range)) %}
 #}
 
 {# Non-sortable table header cell #}
