--- a/templates/pages/tag_form.html
+++ b/templates/pages/tag_form.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <div class="space-y-6">
-    {% call ui::page_header(title="Add Tag", back_url="/tags", back_label="Tags", subtitle="Create a new tag to label expenses") %}{% endcall %}
+    {% call ui::page_header(title="Add Tag", back_url="/tags", back_label="Tags", subtitle="Create a new tag to label transactions") %}{% endcall %}
 
     <div class="bg-white dark:bg-neutral-800 rounded-xl border border-neutral-200 dark:border-neutral-700 p-6 max-w-lg">
         <form action="/tags/create" method="POST" class="space-y-4">
