--- a/templates/pages/tags.html
+++ b/templates/pages/tags.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="space-y-6">
     <div class="flex flex-col sm:flex-row sm:items-start sm:justify-between gap-4">
-        {% call ui::page_header(title="Tags", subtitle="Label and categorize transactions") %}{% endcall %}
+        {% call ui::page_header(title="Tags", subtitle="Label and tag transactions") %}{% endcall %}
         {% call ui::page_action_bar(
             export_url="/tags/export",
             import_url="/tags/import",
